color and layout changes for lg

--- a/index.html
+++ b/index.html
@@ -11,76 +11,80 @@
 </head>
 
 <body>
-    <div class="container p-4">
+    <div class="container p-4 background mt-5">
+        <div class="col-lg-12 alert title d-flex justify-content-center">
+            <p class="h3 font-weight-bold">Slots</p>
+        </div>
         <div class="row d-flex justify-content-between p-4">
-            <div id="#draggable" class="col-lg-2 alert alert-danger ui-widget-content">
-                <p>Computer's Cards</p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
-            </div>
-            <div class="col-lg-1 alert alert-primary droppable">
-                <p class="computer hidden"></p>
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+                <p class="computer font-weight-bold h2 hidden"></p>
             </div>
         </div>
         <!-- second row -->
+        <div class="col-lg-12 alert title d-flex justify-content-center">
+            <p class="h3 font-weight-bold">Your Cards</p>
+        </div>
         <div class="row d-flex justify-content-between p-4">
-            <div class="col-lg-2 alert alert-danger">
-                <p>Your <br> Cards</p>
+            <div id="one" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="one" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="two" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="two" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="three" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="three" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="four" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="four" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="five" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="five" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="six" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="six" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="seven" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="seven" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="eight" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="eight" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="nine" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="nine" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <div id="ten" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+                <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="ten" class="col-lg-1 alert alert-primary draggable">
-                <p class="player"></p>
+            <!-- third row -->
+            <div id="output" class="offset-lg-3 col-lg-6 alert title mt-3 d-flex justify-content-center">
+                <p class="font-weight-bold">Drop the card in the right slot</p>
             </div>
         </div>
         <!-- end of container -->
