--- a/index.html
+++ b/index.html
@@ -16,34 +16,34 @@
             <p class="h3 font-weight-bold">Slots</p>
         </div>
         <div class="row d-flex justify-content-between p-4">
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
-            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center">
+            <div class="col-lg-1 col-sm-1 alert white droppable d-flex justify-content-center align-items-center border border-primary">
                 <p class="computer font-weight-bold h2 hidden"></p>
             </div>
         </div>
@@ -52,34 +52,34 @@
             <p class="h3 font-weight-bold">Your Cards</p>
         </div>
         <div class="row d-flex justify-content-between p-4">
-            <div id="one" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="one" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="two" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="two" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="three" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="three" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="four" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="four" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="five" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="five" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="six" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="six" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="seven" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="seven" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="eight" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="eight" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="nine" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="nine" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
-            <div id="ten" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center">
+            <div id="ten" class="col-lg-1 col-sm-1 alert white draggable d-flex justify-content-center align-items-center border border-primary">
                 <p class="player font-weight-bold h2"></p>
             </div>
             <!-- third row -->
